syntax = "proto3";

import "google/protobuf/timestamp.proto";


package proposal_query_event_message;

message Proposal {
  string topic = 1;
  int32 duration = 2;
  bool expired = 3;

  Result result = 4;
  repeated BlockHeight block_heights = 5;

  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp expired_at = 7;

  repeated string options = 8;
}

message BlockHeight {
  int32 height = 1;
  int32 length = 2;
}

message Result {
  int32 count = 1;
  map<string, int32> options = 2;
}

message Filter {
  optional bool expired = 1;
}

message Paging {
  int32 skip = 1;
  int32 limit = 2;
}

service ProposalQueryEventService {
  rpc GetProposalDetail(GetProposalDetailRequest)
      returns (GetProposalDetailResponse);

  rpc GetFilteredProposalList(GetFilteredProposalListRequest)
      returns (GetFilteredProposalListResponse);
}

message GetProposalDetailRequest {
  string topic = 1;
}

message GetProposalDetailResponse {
  bool queried = 1;
  string status = 2;
  Proposal proposal = 3;
}

message GetFilteredProposalListRequest {
  Filter filter = 1;
  Paging paging = 2;
}

message GetFilteredProposalListResponse {
  bool queried = 1;
  string status = 2;
  repeated Proposal proposal_list = 3;
}